--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "faker (>=37.4.0,<38.0.0)",
     "pandas (>=2.3.1,<3.0.0)",
-    "pyspark (==3.5.6)"
+    "pyspark (==3.5.6)",
+    "fastavro (>=1.12.0,<2.0.0)"
 ]
 
 [tool.poetry]
